# pico_mqtt

./: .gitignore  CMakeLists.txt  README.md  erro_build.txt
build10/: CMakeCache.txt
build11/: CMakeCache.txt  CopyOfCMakeCache.txt  build.ninja  cmake_install.cmake
build11/pico-sdk/: cmake_install.cmake
build11/pico-sdk/docs/: cmake_install.cmake
build11/pico-sdk/src/: cmake_install.cmake
build11/pico-sdk/tools/: cmake_install.cmake
build12/: CMakeCache.txt
build13/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  pico_mqtt.dis  pico_mqtt.elf  pico_mqtt.elf.map  pico_mqtt.hex  pico_mqtt.uf2
build13/pico-sdk/: cmake_install.cmake
build13/pico-sdk/docs/: cmake_install.cmake
build13/pico-sdk/src/: cmake_install.cmake
build13/pico-sdk/tools/: cmake_install.cmake
build13/pioasm/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  install_manifest.txt
build2/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build2/pico-sdk/: cmake_install.cmake
build2/pioasm/: CMakeCache.txt
build3/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build3/pico-sdk/: cmake_install.cmake
build3/pioasm/: CMakeCache.txt
build4/: CMakeCache.txt
build5/: CMakeCache.txt
build6/: CMakeCache.txt
build7/: CMakeCache.txt
build8/: CMakeCache.txt
build9/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build9/pico-sdk/: cmake_install.cmake
build9/pioasm/: CMakeCache.txt
include/: config.h  lwipopts.h
src/: main.c
(+510 files in other folders)
